# data_ml_infra_snippets

.github/workflows/: docker-release.yaml
apps/deploykf/: cert-manager.yaml  cloudflare-cluster-issuer.yaml  deploykf-config.yaml  twingate.yaml
apps/kyuubi/: Application.yaml
charts/hive-metastore/: Chart.yaml  values.yaml
charts/hive-metastore/dev/: core-site.xml  metastore-site.xml
charts/hive-metastore/templates/: configmaps.yaml  deployment.yaml  role-binding.yaml  role.yaml  service.yaml
docker/hive/4.0.0/: Dockerfile
docker/kyuubi/1.9.0/: Dockerfile
docker/spark/3.5.1/: Dockerfile
flyte_finetuning/: README.md  pyproject.toml
flyte_finetuning/helm/: values.yaml
flyte_finetuning/workflow/: fine_tune.py
scripts/: deploykf.sh
